--- a/style/styles.css
+++ b/style/styles.css
@@ -2,22 +2,17 @@
 
 
 /* fonts */
-.open-sans-inter{
-  font-family: "Open Sans", sans-serif;
+.inter-logo{
+  font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight: bolder;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
 }
 
-.open-sans-banner {
-  font-family: "Open Sans", sans-serif;
+.raleway-banner{
+  font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
-  font-weight: bold;
+  font-weight: <weight>;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
 }
 /* button-style */
 
