--- a/style/styles.css
+++ b/style/styles.css
@@ -1,22 +1,25 @@
-
-
-
 /* fonts */
-.inter-logo{
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
+.inter-logo {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
-.raleway-banner{
-  font-family: "Raleway", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
+.raleway-banner {
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+/* container */
+.container {
+    max-width: 1140px;
+    margin: 0 auto;
+    padding: 0 20px; 
 }
 /* button-style */
 
-.btn-primary{
+.btn-primary {
     background-color: #4E47FF;
     color: white;
     font-size: 16px;
@@ -25,9 +28,10 @@
     border-radius: 5px;
     border: none;
 }
+
 /* navigation */
 
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,20 +39,17 @@ nav{
 }
 
 
-.banner{
-    margin-top: 130px;
-    
+.banner {
+    justify-content: center;
+
 }
 
-.header{
-    background-image:url('../image/hero-bg.png');
-   width: auto;
-   height: auto;
-   gap: 158px;
-   
+.header {
+    background-image: url('../image/hero-bg.png');
+    align-items: center;
 }
 
-.banner-container{
+.banner-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -56,34 +57,66 @@ nav{
     padding-bottom: 200px;
     text-align: center;
 }
-.banner-title{
-    
-}
+
+.banner-title {}
+
 /* action */
-.action-highlight{
+.action-highlight {
+    margin-top: 200px;
+    margin-bottom: 200px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    margin-top: 200px;
-}
-.image-container{
-    height: 328px;
-    width: 403px;
-    
-}
-main section div img {
-border-radius: 48px;
-}
-main{
-    max-width: 1440px;
-    margin: 0 auto;
+    max-width: 1140px;
+    align-items: center;
+    gap: 60px;
+    flex-wrap: wrap;
 }
 
-.grey{
-   color: #545366; 
+.image-container {}
+
+
+.highlight-image {
+    border-radius: 48px;
+    height: 328px;
+    width: 403px;
+    object-fit: cover;
+    margin-top: 0;
 }
-.action-content{
-    height: 203px;
+
+main {
+    max-width: 1440px;
+    margin: 0% auto;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+
+
+.action-content {
     width: 517px;
+}
+
+/* pdt-users-style */
+.pdt-users{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 1140px;
+    
+    text-align: center;
+    background-color: #4d47ff23;
+}
+.users-data-info{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+}
+.users-data{
+    
 }
