productive users section complete(vai matha ghuraitasa)

--- a/style/styles.css
+++ b/style/styles.css
@@ -2,7 +2,7 @@
 .inter-logo {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    font-style: normal;
+    font-style: auto;
 }
 
 .raleway-banner {
@@ -10,7 +10,16 @@
     font-optical-sizing: auto;
     font-style: normal;
 }
-
+.blue-font-styles{
+    color: #4E47FF;
+    font-weight: bold;
+    font-size: 80px;
+}
+.desp-style{
+    color: #00000073;
+    font-size: 20px;
+    
+}
 /* container */
 .container {
     max-width: 1140px;
@@ -58,7 +67,7 @@ nav {
     text-align: center;
 }
 
-.banner-title {}
+
 
 /* action */
 .action-highlight {
@@ -74,7 +83,7 @@ nav {
     flex-wrap: wrap;
 }
 
-.image-container {}
+
 
 
 .highlight-image {
@@ -106,9 +115,10 @@ main {
     align-items: center;
     justify-content: center;
     max-width: 1140px;
-    
+    padding: 50px 142px;
     text-align: center;
     background-color: #4d47ff23;
+    border-radius: 24px;
 }
 .users-data-info{
     display: flex;
@@ -117,6 +127,8 @@ main {
     justify-content: center;
     gap: 40px;
 }
-.users-data{
+.users-data h3,
+.users-data p {
+    margin: 0;
     
 }
