--- a/style/styles.css
+++ b/style/styles.css
@@ -150,7 +150,7 @@ main {
     border-radius: 14px;
     padding: 24px 24px;
     box-shadow: #F2EDED 2px 2px;
-    border: black 2px;
+    
 }
 .review-header{
     display: flex;
@@ -161,6 +161,10 @@ main {
     font-size: smaller;
     color: #1E1E1E;
 }
+.reviewer-info{
+    list-style: none;
+}
+
 
 .name , .date {
     color: #25243279;
@@ -171,6 +175,66 @@ main {
     width: 40px;
    
 }
-.reviewer-info{
+.get-in-touch{
+    display: flex;
+    margin: 71px 0;
+    justify-content: space-between;
+    margin-top: 200px;
+    border: none;
+
+}
+
+.contact-me-form{
+  
+}
+input[type=text]{
+    height: 70px;
+    width: 100%;
+    border-radius: 10px;
+    color: #D6DDED;
+    font-size: 20px;
     
+
+}
+body{
+    background-color: #D6DDED;
+}
+.messege{
     
+}
+textarea{
+    height: 135px;
+    width: 100%;
+}
+
+footer {
+    text-decoration: none;
+    text-align: center;
+    background-color: rgb(240, 234, 234);
+    align-items: center;
+    max-width: auto;
+    max-height: 427px;
+    justify-content: center;
+    justify-items: center;
+    padding: 103px 454px;
+    gap: 0;
+}
+footer ul li {
+    display: inline;
+}
+.footer-nav{
+    width: 401px;
+    height: 24px;
+    gap: 48px;
+}
+.footer-desc{
+    width: 531px;
+}
+.contact-me-form h5 {
+  margin-bottom: 0;
+  font-size: 18px;
+}
+.name{
+    margin-bottom: 0px;
+    padding: 0;
+}
