--- a/style/styles.css
+++ b/style/styles.css
@@ -36,6 +36,11 @@
     padding: 12px 36px;
     border-radius: 5px;
     border: none;
+    cursor: pointer;
+}
+.btn-primary:hover{
+    background-color: #35319c;
+    zoom: 105%;
 }
 
 /* navigation */
