--- a/style/styles.css
+++ b/style/styles.css
@@ -22,7 +22,7 @@
 }
 /* container */
 .container {
-    max-width: 1140px;
+    width: 1140px;
     margin: 0 auto;
     padding: 0 20px; 
 }
@@ -61,6 +61,7 @@ nav {
 .header {
     background-image: url('../image/hero-bg.png');
     align-items: center;
+    position: relative;
 }
 
 .banner-container {
@@ -105,6 +106,7 @@ main {
     justify-content: center;
     align-content: center;
     align-items: center;
+    position: relative;
 }
 
 
@@ -236,10 +238,17 @@ form {
 .footer-logo{
     font-size: 100px;
     color: #4E47FF;
+    text-align: center;
 }
 
+
 .footer{
-    max-width: 532px;
+    width: 532px;
     margin: 0 auto;
     padding: 103px 454px;
 }
+ footer nav a{
+    text-decoration: none;
+    color: #8987A1;
+
+ }
